<resources>
    <string name="app_name">MIS LUGARES</string>
    <string name="accion_mostrar">Mostrar lugares</string>
    <string name="accion_preferencias">Preferencias</string>
    <string name="accion_about">Acerca de </string>
    <string name="accion_salir">Salir</string>

    <string name="action_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="notificaciones">Mandar Notificaciones</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="editText">Máximo de lugares a mostrar</string>
    <string name="criterios">Criterios de evaluacion</string>

    <string name="nombre">Nombre:</string>
    <string name="Tipo">Tipo:</string>
    <string name="direccion">Direccion:</string>
    <string name="telefono">Telefono:</string>
    <string name="URL">URL:</string>
    <string name="comentario">Comentario:</string>
    <string name="NombresLugar">Nombres del Lugar</string>

    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="compartir">Compartir</string>

</resources>