<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="sync"
        app:summary="notificar si estamos cerca de un lugar"
        app:title="@string/notificaciones" />


    <EditTextPreference
        android:defaultValue="12"
        android:inputType="number"
        android:key="edit_text_preference_1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="Limita en número de valores que se muestra"
        android:title="@string/editText" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/nombres"
        android:entryValues="@array/numeros"
        android:key="list_preference_1"
        android:summary="Qué lugares quieres que aparezcab antes"
        android:title="@string/criterios" />

</PreferenceScreen>